test/cli/test-generate/sync-multiple-resources/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kubernetes-cluster-controller-config
  namespace: kube-system
data:
  value: "0"
