test/cli/test-generate/sync-multiple-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-cluster-controller
  namespace: kube-system
  labels:
    app: kubernetes-cluster-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-cluster-controller
  template:
    metadata:
      labels:
        app: kubernetes-cluster-controller
    spec:
      containers:
        - name: front-end
          image: nginx
          ports:
            - containerPort: 8080
        - name: rss-reader
          image: nickchase/rss-php-nginx:v1
          ports:
            - containerPort: 8080
