test/cli/test-generate/sync-multiple-resources/gen-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kubernetes-cluster-controller-config
  namespace: services-system
data:
  value: "0"
