test/cli/test-generate/sync-multiple-resources/kyverno-test.yaml
name: sync-controller-data
policies:
  - policy.yaml
resources:
  - deployment.yaml
results:
  - policy: sync-controller-data
    rule: sync-controller-secret
    resources:
      - kubernetes-cluster-controller
    generatedResource: gen-secret.yaml
    cloneSourceResource: secret.yaml
    kind: Deployment
    result: pass
  - policy: sync-controller-data
    rule: sync-controller-configmap
    resources: 
      - kubernetes-cluster-controller
    generatedResource: gen-cm.yaml
    cloneSourceResource: cm.yaml
    kind: Deployment
    result: pass
