test/cli/test-generate/sync-multiple-resources/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: kubernetes-cluster-controller
  namespace: kube-system
type: Opaque
data:
  USER_NAME: YWRtaW4=
  PASSWORD: YWRtaW4=
